@@ -56,7 +56,7 @@ newiList (int type, void *ilist)
   nilist = Safe_alloc (sizeof (initList));
 
   nilist->type = type;
-  nilist->lineno = yylineno;
+  nilist->lineno = mylineno;
 
   switch (type)
     {
